refactor: WishService 알맞게 변경